# hooky

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  problem_research.md  tailwind.config.ts  user_flow.md
app/: globals.css  layout.tsx  page.tsx
components/: theme-toggle.tsx
migrations/: 20251210170248_create_tables.sql
src/: main.rs
web/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/app/: globals.css  layout.tsx  providers.tsx  root.tsx  routes.ts
web/app/routes/: _index.tsx  create-webhook.tsx  dashboard-layout.tsx  deliveries.tsx  delivery-detail.tsx  logs.tsx  overview.tsx  settings.tsx  webhooks.tsx
web/components/: dashboard-layout.tsx  deliveries-table.tsx  logs-filter.tsx  logs-list.tsx  recent-events-table.tsx  sidebar.tsx  stat-card.tsx  top-nav.tsx  webhook-table.tsx
web/components/charts/: endpoint-health-chart.tsx
web/components/drawers/: delivery-drawer.tsx
web/components/modals/: create-webhook-modal.tsx
web/components/pages/: create-webhook.tsx  deliveries.tsx  delivery-detail.tsx  logs.tsx  overview.tsx  settings.tsx  webhooks.tsx
web/components/ui/: badge.tsx  sidebar.tsx
web/hooks/: use-api.ts
web/lib/: api.ts  types.ts
